--- a/RecipeMaster/app/src/main/res/layout/content_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:gravity="center"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.szak.recipemaster.MainActivity"
     tools:showIn="@layout/activity_main">
@@ -15,5 +16,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RecipeMaster" />
+        android:text="RecipeMaster"
+        />
 </RelativeLayout>
