--- a/RecipeMaster/app/src/main/res/layout/content_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_main.xml
@@ -8,31 +8,36 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.szak.recipemaster.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_main"
+    android:gravity="center">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/menuPizza"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-         />
+        android:id="@+id/menuPizza" />
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/menuPizza"
-        android:layout_marginTop="24dp"
-        android:layout_centerHorizontal="true"
         android:src="@drawable/pizza1"
         android:id="@+id/circleView"
         android:alpha=".40"
-        />
+        android:layout_margin="50dp" />
 
-    
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RecipeMaster"
+        android:textColor="#000000"
+        android:textSize="32dp"
+        android:textStyle="bold"
+        android:typeface="sans"
+        android:gravity="center"
+        android:id="@+id/projectTitle"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
