--- a/RecipeMaster/app/src/main/res/layout/activity_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,24 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            />
+
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/menuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_input_add"
+        android:scaleType="center"
+        app:backgroundTint="#f6c907"
+        android:tint="#ffffff" />
 
 </android.support.design.widget.CoordinatorLayout>
