--- a/RecipeMaster/app/src/main/res/layout/content_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_main.xml
@@ -30,9 +30,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RecipeMaster"
+        android:text="@string/logo_title"
         android:textColor="#000000"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:textStyle="bold"
         android:typeface="sans"
         android:gravity="center"
