--- a/RecipeMaster/app/src/main/res/layout/activity_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/activity_main.xml
@@ -17,15 +17,92 @@
 
     <include layout="@layout/content_main" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/menuButton"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_input_add"
-        android:scaleType="center"
-        app:backgroundTint="#f6c907"
-        android:tint="#ffffff" />
+        android:orientation="vertical"
+        android:layout_gravity="bottom|end">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right"
+            android:paddingBottom="15dp">
+
+            <android.support.v7.widget.DialogTitle
+                android:id="@+id/recipeDialogTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:layout_gravity="center"
+                android:text="Get the recipe"
+                android:textStyle="bold"
+                android:background="#ffffff"
+                android:visibility="gone" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/menuRecipeButton"
+                android:layout_width="@dimen/float_button_dimension"
+                android:layout_height="@dimen/float_button_dimension"
+                android:src="@android:drawable/ic_input_add"
+                android:scaleType="center"
+                app:backgroundTint="#f6c907"
+                android:tint="#ffffff"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:layout_marginRight="22dp"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <android.support.v7.widget.DialogTitle
+                android:id="@+id/facebookDialogTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="20dp"
+                android:layout_gravity="center"
+                android:text="Zaloguj przez Facebooka"
+                android:textStyle="bold"
+                android:background="#ffffff"
+                android:visibility="gone" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/menuFacebookButton"
+                android:layout_width="@dimen/float_button_dimension"
+                android:layout_height="@dimen/float_button_dimension"
+                android:src="@android:drawable/ic_input_add"
+                android:scaleType="center"
+                app:backgroundTint="#f6c907"
+                android:tint="#ffffff"
+                android:visibility="gone"
+                android:layout_gravity="center"
+                android:layout_marginRight="22dp"/>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|right"
+            android:layout_margin="@dimen/fab_margin">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/menuButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@android:drawable/ic_input_add"
+                android:scaleType="center"
+                app:backgroundTint="#f6c907"
+                android:tint="#ffffff" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
