--- a/RecipeMaster/app/src/main/res/layout/content_pizza_recipe.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_pizza_recipe.xml
@@ -12,4 +12,9 @@
     tools:context="com.example.szak.recipemaster.PizzaRecipe"
     tools:showIn="@layout/activity_pizza_recipe">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/titlesTextView"/>
+
 </RelativeLayout>
