--- a/RecipeMaster/app/src/main/res/layout/content_pizza_recipe.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_pizza_recipe.xml
@@ -186,6 +186,42 @@
                     android:paddingRight="20dp"
                     android:paddingBottom="20dp">
 
+                    <ImageView
+                        android:id="@+id/image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <ImageView
+                        android:id="@+id/image0"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:src="@drawable/pizza_mood1"
+                        android:maxHeight="160dp"
+                        android:maxWidth="320dp"
+                        android:adjustViewBounds="true" />
+
+                    <ImageView
+                        android:id="@+id/image1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:maxWidth="320dp"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/pizza_mood2"
+                        android:maxHeight="160dp"
+                        android:paddingLeft="20dp"
+                        android:paddingRight="20dp"/>
+
+                    <ImageView
+                        android:id="@+id/image2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:maxHeight="160dp"
+                        android:maxWidth="320dp"
+                        android:src="@drawable/pizza_mood3"
+                        android:adjustViewBounds="true" />
 
                 </LinearLayout>
             </HorizontalScrollView>
