--- a/RecipeMaster/app/src/main/res/layout/activity_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,9 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.szak.recipemaster.MainActivity">
 
+
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
