--- a/RecipeMaster/app/src/main/res/layout/content_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.szak.recipemaster.MainActivity"
     tools:showIn="@layout/activity_main"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/contentMain">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
