--- a/RecipeMaster/app/src/main/res/layout/activity_main.xml
+++ b/RecipeMaster/app/src/main/res/layout/activity_main.xml
@@ -67,26 +67,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.DialogTitle
-                android:id="@+id/facebookDialogTitle"
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/menuFacebookButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="20dp"
-                android:layout_gravity="center"
-                android:text="Zaloguj przez Facebooka"
-                android:textStyle="bold"
-                android:background="#ffffff"
-                android:visibility="gone"
-                android:textColor="#000000" />
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/menuFacebookButton"
-                android:layout_width="@dimen/float_button_dimension"
-                android:layout_height="@dimen/float_button_dimension"
-                android:src="@android:drawable/ic_input_add"
-                android:scaleType="center"
-                app:backgroundTint="#f6c907"
-                android:tint="#ffffff"
                 android:visibility="gone"
                 android:layout_gravity="center"
                 android:layout_marginRight="22dp" />
